--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
         <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.13.0/js/all.js" crossorigin="anonymous"></script>
+        <!-- <script src="https://use.fontawesome.com/351846b75e.js"></script> -->
+        <!-- <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css"> -->
         <!-- Google fonts-->
         <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
         <link href="https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic" rel="stylesheet" type="text/css" />
@@ -28,15 +30,34 @@
 
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
+          <a class="navbar-brand js-scroll-trigger" href="#page-top">Xena Sitnikova</a>
+
+
+          <div class="flex-container ">
+
+                <a class="btn btn-dark btn-social mx-1" href="https://linkedin.com/in/sxena" target="_blank">
+                  <i class="fab fa-linkedin-in"></i></a>
+                <a class="btn btn-dark btn-social mx-1" href="https://github.com/sxena" target="_blank">
+                  <i class="fab fa-github-alt" aria-hidden="true"></i></a>
+                <a class="btn btn-dark btn-social mx-1" href="mailto:sitnikovaxena@gmail.com" target="_blank">
+                  <i class="fa fa-envelope"></i></a>
+                <a class="btn btn-dark btn-social mx-1" href="tel:+12129204987" target="_blank">
+                  <i class="fa fa-phone"></i></a>
+            </div>
+
+
+          <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">Menu<i class="fas fa-bars ml-1"></i></button>
+
+
+
             <div class="container">
-                <a class="navbar-brand js-scroll-trigger" href="#page-top">Xena Sitnikova</a><button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">Menu<i class="fas fa-bars ml-1"></i></button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav text-uppercase ml-auto">
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skilzzz</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#projects">Projects</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contact">Contact</a></li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#blog">Blog</a></li>
+                        <!-- <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#blog">Blog</a></li> -->
                     </ul>
                 </div>
             </div>
@@ -58,24 +79,44 @@
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">Madd Skilzzz</h2>
-                    <h3 class="section-subheading text-muted">This is knowledge that has been aquired!!! Not stopping to master and learn new! A</h3>
+                    <h3 class="section-subheading text-muted">Knowledge that has been aquired!!! Not stopping to master and learn new!</h3>
                 </div>
                 <div class="row text-center">
-                    <div class="col-md-4">
-                        <span class="fa-stack fa-4x"><i class="fas fa-circle fa-stack-2x text-primary"></i><i class="fas fa-shopping-cart fa-stack-1x fa-inverse"></i></span>
-                        <h4 class="my-3">E-Commerce</h4>
-                        <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
-                    </div>
-                    <div class="col-md-4">
+
+                    <div class="col-md-3">
                         <span class="fa-stack fa-4x"><i class="fas fa-circle fa-stack-2x text-primary"></i><i class="fas fa-laptop fa-stack-1x fa-inverse"></i></span>
-                        <h4 class="my-3">Responsive Design</h4>
-                        <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                        <h4 class="my-3">Front End</h4>
+                        <p class="text-muted">HTML</p>
+                        <p class="text-muted">CSS</p>
+                        <p class="text-muted">JavaScript</p>
+                        <p class="text-muted">React</p>
+                        <p class="text-muted">Webpack</p>
+                        <p class="text-muted">Bootstrap</p>
                     </div>
-                    <div class="col-md-4">
-                        <span class="fa-stack fa-4x"><i class="fas fa-circle fa-stack-2x text-primary"></i><i class="fas fa-lock fa-stack-1x fa-inverse"></i></span>
-                        <h4 class="my-3">Web Security</h4>
-                        <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+
+                    <div class="col-md-3">
+                        <span class="fa-stack fa-4x"><i class="fas fa-circle fa-stack-2x text-primary"></i><i class="fas fa-server fa-stack-1x fa-inverse"></i></span>
+                        <h4 class="my-3">Back End</h4>
+                        <p class="text-muted">Node</p>
+                        <p class="text-muted">Rails</p>
                     </div>
+
+                    <div class="col-md-3">
+                        <span class="fa-stack fa-4x"><i class="fas fa-circle fa-stack-2x text-primary"></i><i class="fas fa-database fa-stack-1x fa-inverse"></i></span>
+                        <h4 class="my-3">Databases</h4>
+                        <p class="text-muted">Postgres</p>
+                        <p class="text-muted">SQL</p>
+                        <p class="text-muted">MongoDB</p>
+                    </div>
+
+                    <div class="col-md-3">
+                        <span class="fa-stack fa-4x"><i class="fas fa-circle fa-stack-2x text-primary"></i><i class="fab fa-connectdevelop fa-stack-1x fa-inverse"></i></span>
+                        <h4 class="my-3">Dev-Ops</h4>
+                        <p class="text-muted">AWS</p>
+                        <p class="text-muted">Jenkins</p>
+                        <p class="text-muted">Docker</p>
+                    </div>
+
                 </div>
             </div>
         </section>
@@ -90,7 +131,7 @@
         <section class="page-section bg-light" id="projects">
             <div class="container">
                 <div class="text-center">
-                    <h2 class="section-heading text-uppercase">Portfolio</h2>
+                    <h2 class="section-heading text-uppercase">Projects</h2>
                     <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
                 </div>
                 <div class="row">
@@ -298,10 +339,27 @@
         <footer class="footer py-4">
             <div class="container">
                 <div class="row align-items-center">
-                    <div class="col-lg-4 text-lg-left">Copyright © Your Website 2020</div>
+                    <div class="col-lg-4 text-lg-left">Copyright © XenaDev.com 2020</div>
+
+                    <!-- byttons for contacting -->
                     <div class="col-lg-4 my-3 my-lg-0">
-                        <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-twitter"></i></a><a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-facebook-f"></i></a><a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-linkedin-in"></i></a>
+                        <a class="btn btn-dark btn-social mx-2" href="https://twitter.com/sxena89" target="_blank">
+                          <i class="fab fa-twitter"></i></a>
+                        <a class="btn btn-dark btn-social mx-2" href="https://linkedin.com/in/sxena" target="_blank">
+                          <i class="fab fa-linkedin-in"></i></a>
+                        <a class="btn btn-dark btn-social mx-2" href="https://github.com/sxena" target="_blank">
+                          <i class="fab fa-github-alt" aria-hidden="true"></i></a>
+                        <a class="btn btn-dark btn-social mx-2" href="https://gitlab.com/sxena" target="_blank">
+                          <i class="fab fa-gitlab" aria-hidden="true"></i></a>
+                        <a class="btn btn-dark btn-social mx-2" href="mailto:sitnikovaxena@gmail.com" target="_blank">
+                          <i class="fa fa-envelope"></i></a>
+                        <a class="btn btn-dark btn-social mx-2" href="tel:+12129204987" target="_blank">
+                          <i class="fa fa-phone"></i></a>
+
                     </div>
+
+
+
                     <div class="col-lg-4 text-lg-right"><a class="mr-3" href="#!">Privacy Policy</a><a href="#!">Terms of Use</a></div>
                 </div>
             </div>
@@ -336,7 +394,7 @@
 
 
         <!-- Blog-->
-        <section class="page-section bg-light" id="blog">
+        <!-- <section class="page-section bg-light" id="blog">
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">Our Amazing Team</h2>
@@ -372,7 +430,7 @@
                     <div class="col-lg-8 mx-auto text-center"><p class="large text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p></div>
                 </div>
             </div>
-        </section>
+        </section> -->
 
 
         <!-- Modal 2-->
