added fixed footer corrected skillz. Started working on projects. Img is not freaking hovering

--- a/index.html
+++ b/index.html
@@ -32,36 +32,27 @@
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
           <a class="navbar-brand js-scroll-trigger" href="#page-top">Xena Sitnikova</a>
 
-
-          <div class="flex-container ">
-
-                <a class="btn btn-dark btn-social mx-1" href="https://linkedin.com/in/sxena" target="_blank">
-                  <i class="fab fa-linkedin-in"></i></a>
-                <a class="btn btn-dark btn-social mx-1" href="https://github.com/sxena" target="_blank">
-                  <i class="fab fa-github-alt" aria-hidden="true"></i></a>
+                <a class="btn btn-dark btn-social mx-1" href="resume.pdf" target="_blank">
+                  <i class="fa fa-file-pdf"></i></a>
                 <a class="btn btn-dark btn-social mx-1" href="mailto:sitnikovaxena@gmail.com" target="_blank">
                   <i class="fa fa-envelope"></i></a>
                 <a class="btn btn-dark btn-social mx-1" href="tel:+12129204987" target="_blank">
                   <i class="fa fa-phone"></i></a>
-            </div>
 
+                <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">Menu<i class="fas fa-bars ml-1"></i></button>
 
-          <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">Menu<i class="fas fa-bars ml-1"></i></button>
-
-
-
-            <div class="container">
-                <div class="collapse navbar-collapse" id="navbarResponsive">
-                    <ul class="navbar-nav text-uppercase ml-auto">
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skilzzz</a></li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#projects">Projects</a></li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contact">Contact</a></li>
-                        <!-- <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#blog">Blog</a></li> -->
-                    </ul>
+                <div class="container">
+                    <div class="collapse navbar-collapse" id="navbarResponsive">
+                        <ul class="navbar-nav text-uppercase ml-auto">
+                            <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skilzzz</a></li>
+                            <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#projects">Projects</a></li>
+                            <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
+                            <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contact">Contact</a></li>
+                            <!-- <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#blog">Blog</a></li> -->
+                        </ul>
+                    </div>
                 </div>
-            </div>
-        </nav>
+          </nav>
 
 
         <!-- Masthead-->
@@ -69,7 +60,7 @@
             <div class="container">
                 <!-- <div class="masthead-subheading">Hello!</div> -->
                 <!-- <div class="masthead-heading text-uppercase">Lets Start</div> -->
-                <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">Let us begin</a>
+                <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#skills">Let's begin</a>
             </div>
         </header>
 
@@ -130,25 +121,51 @@
         <!-- Portfolio Grid-->
         <section class="page-section bg-light" id="projects">
             <div class="container">
+
+
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">Projects</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h3 class="section-subheading text-muted">Some selected projects for show. A lot more is coming...</h3>
                 </div>
+
+
                 <div class="row">
+
+
                     <div class="col-lg-4 col-sm-6 mb-4">
                         <div class="portfolio-item">
-                            <a class="portfolio-link" data-toggle="modal" href="#portfolioModal1"
-                                ><div class="portfolio-hover">
-                                    <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
-                                </div>
-                                <img class="img-fluid" src="assets/img/portfolio/01-thumbnail.jpg" alt=""
-                            /></a>
+                            <a class="portfolio-link" data-toggle="modal" href="#portfolioModal1">
+
+                                <div class="portfolio-hover">
+                                    <div class="portfolio-hover-content">
+                                      <i class="fas fa-play fa-3x"></i>
+                                      <i class="fab fa-twitter" href="https://twitter.com/sxena89" target="_blank"></i>
+                                      <i class="fab fa-linkedin-in" href="https://linkedin.com/in/sxena" target="_blank"></i>
+                                    </div>
+
+
+                            <img class="img-fluid" src="assets/img/projects/treasure.png" alt="" /></a>
+                          </div>
+
+
+
+
+
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Threads</div>
-                                <div class="portfolio-caption-subheading text-muted">Illustration</div>
+                                <div class="portfolio-caption-heading">Treasure HUNT</div>
+                                <div class="portfolio-caption-subheading text-muted">Rules of the game:
+                                  <ul>
+                                    <li>You have 5 tries</li>
+                                    <li>Find a Palmtree and you WIN</li>
+                                    <li>Find a Shark.... wha wha wha.... </li>
+                                  </ul>
+                                </div>
+                                </div>
                             </div>
-                        </div>
                     </div>
+
+
+
                     <div class="col-lg-4 col-sm-6 mb-4">
                         <div class="portfolio-item">
                             <a class="portfolio-link" data-toggle="modal" href="#portfolioModal2"
@@ -163,6 +180,9 @@
                             </div>
                         </div>
                     </div>
+
+
+
                     <div class="col-lg-4 col-sm-6 mb-4">
                         <div class="portfolio-item">
                             <a class="portfolio-link" data-toggle="modal" href="#portfolioModal3"
@@ -177,6 +197,9 @@
                             </div>
                         </div>
                     </div>
+
+
+
                     <div class="col-lg-4 col-sm-6 mb-4 mb-lg-0">
                         <div class="portfolio-item">
                             <a class="portfolio-link" data-toggle="modal" href="#portfolioModal4"
@@ -191,6 +214,9 @@
                             </div>
                         </div>
                     </div>
+
+
+
                     <div class="col-lg-4 col-sm-6 mb-4 mb-sm-0">
                         <div class="portfolio-item">
                             <a class="portfolio-link" data-toggle="modal" href="#portfolioModal5"
@@ -205,6 +231,9 @@
                             </div>
                         </div>
                     </div>
+
+
+
                     <div class="col-lg-4 col-sm-6">
                         <div class="portfolio-item">
                             <a class="portfolio-link" data-toggle="modal" href="#portfolioModal6"
@@ -219,9 +248,19 @@
                             </div>
                         </div>
                     </div>
+
+
                 </div>
             </div>
         </section>
+
+
+
+
+
+
+
+
         <!-- About-->
         <section class="page-section" id="about">
             <div class="container">
@@ -335,35 +374,36 @@
                 </form>
             </div>
         </section>
+
+
         <!-- Footer-->
-        <footer class="footer py-4">
+      <footer class="footer py-4">
+        <div id="footer">
             <div class="container">
+              <div class="footerfooter">
                 <div class="row align-items-center">
                     <div class="col-lg-4 text-lg-left">Copyright © XenaDev.com 2020</div>
-
-                    <!-- byttons for contacting -->
-                    <div class="col-lg-4 my-3 my-lg-0">
-                        <a class="btn btn-dark btn-social mx-2" href="https://twitter.com/sxena89" target="_blank">
-                          <i class="fab fa-twitter"></i></a>
-                        <a class="btn btn-dark btn-social mx-2" href="https://linkedin.com/in/sxena" target="_blank">
-                          <i class="fab fa-linkedin-in"></i></a>
-                        <a class="btn btn-dark btn-social mx-2" href="https://github.com/sxena" target="_blank">
-                          <i class="fab fa-github-alt" aria-hidden="true"></i></a>
-                        <a class="btn btn-dark btn-social mx-2" href="https://gitlab.com/sxena" target="_blank">
-                          <i class="fab fa-gitlab" aria-hidden="true"></i></a>
-                        <a class="btn btn-dark btn-social mx-2" href="mailto:sitnikovaxena@gmail.com" target="_blank">
-                          <i class="fa fa-envelope"></i></a>
-                        <a class="btn btn-dark btn-social mx-2" href="tel:+12129204987" target="_blank">
-                          <i class="fa fa-phone"></i></a>
-
-                    </div>
-
-
-
-                    <div class="col-lg-4 text-lg-right"><a class="mr-3" href="#!">Privacy Policy</a><a href="#!">Terms of Use</a></div>
+                      <!-- byttons for contacting -->
+                      <div class="col-lg-4 my-3 my-lg-0">
+                          <a class="btn btn-dark btn-social mx-2" href="https://twitter.com/sxena89" target="_blank">
+                            <i class="fab fa-twitter"></i></a>
+                          <a class="btn btn-dark btn-social mx-2" href="https://linkedin.com/in/sxena" target="_blank">
+                            <i class="fab fa-linkedin-in"></i></a>
+                          <a class="btn btn-dark btn-social mx-2" href="https://github.com/sxena" target="_blank">
+                            <i class="fab fa-github-alt" aria-hidden="true"></i></a>
+                          <a class="btn btn-dark btn-social mx-2" href="https://gitlab.com/sxena" target="_blank">
+                            <i class="fab fa-gitlab" aria-hidden="true"></i></a>
+                          <a class="btn btn-dark btn-social mx-2" href="mailto:sitnikovaxena@gmail.com" target="_blank">
+                            <i class="fa fa-envelope"></i></a>
+                          <a class="btn btn-dark btn-social mx-2" href="tel:+12129204987" target="_blank">
+                            <i class="fa fa-phone"></i></a>
+                      </div>
+                    <div class="col-lg-4 text-lg-right"><a class="mr-3" style="color:black;" href="#!">Privacy Policy</a><style="color:black;"a href="#!">Terms of Use</a></div>
                 </div>
-            </div>
+             </div>
+          </div>
         </footer>
+
         <!-- Portfolio Modals--><!-- Modal 1-->
         <div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" role="dialog" aria-hidden="true">
             <div class="modal-dialog">
@@ -391,6 +431,7 @@
                 </div>
             </div>
         </div>
+</div>
 
 
         <!-- Blog-->
