--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="description" content="" />
         <meta name="author" content="" />
         <title>XenaDev</title>
-        <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
+        <link rel="icon" type="image/x-icon" href="assets/img/favicon.png" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.13.0/js/all.js" crossorigin="anonymous"></script>
         <!-- <script src="https://use.fontawesome.com/351846b75e.js"></script> -->
@@ -31,14 +31,14 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
           <a class="navbar-brand js-scroll-trigger" href="#page-top">Xena Sitnikova</a>
-
+            <div class="col-lg-4 my-3 my-sm-2">
                 <a class="btn btn-dark btn-social mx-1" href="resume.pdf" target="_blank">
                   <i class="fa fa-file-pdf"></i></a>
                 <a class="btn btn-dark btn-social mx-1" href="mailto:sitnikovaxena@gmail.com" target="_blank">
                   <i class="fa fa-envelope"></i></a>
                 <a class="btn btn-dark btn-social mx-1" href="tel:+12129204987" target="_blank">
                   <i class="fa fa-phone"></i></a>
-
+             </div>
                 <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">Menu<i class="fas fa-bars ml-1"></i></button>
 
                 <div class="container">
@@ -188,7 +188,7 @@
 
 <!-- =================================================================================================== -->
 
-                    <div class="col-lg-4 col-sm-6 mb-4 mb-lg-0">
+                    <!-- <div class="col-lg-4 col-sm-6 mb-4 mb-lg-0">
                         <div class="portfolio-item">
 
                           <a class="portfolio-link" data-toggle="modal" href="#portfolioModal4">
@@ -245,7 +245,7 @@
 
 
                 </div>
-            </div>
+            </div> -->
         </section>
 
 
@@ -308,8 +308,7 @@
                         </div>
                     </li>
                     <li class="timeline-inverted">
-                        <div class="timeline-image">
-                            <h4>And this<br />is the<br />Story!</h4>
+                      <div class="timeline-image"><a  href="resume.pdf" target="_blank"><img class="rounded-circle img-fluid" src="assets/img/about/5.jpg" alt="" /></a></div>
                         </div>
                     </li>
                 </ul>
@@ -382,7 +381,7 @@
                 <div class="row align-items-center">
                     <div class="col-lg-4 text-lg-left">Copyright © XenaDev.com 2020</div>
                       <!-- byttons for contacting -->
-                      <div class="col-lg-4 my-3 my-lg-0">
+                      <div class="col-lg-3 my-2 my-sm-0">
                           <a class="btn btn-dark btn-social mx-2" href="https://twitter.com/sxena89" target="_blank">
                             <i class="fab fa-twitter"></i></a>
                           <a class="btn btn-dark btn-social mx-2" href="https://linkedin.com/in/sxena" target="_blank">
@@ -395,6 +394,8 @@
                             <i class="fa fa-envelope"></i></a>
                           <a class="btn btn-dark btn-social mx-2" href="tel:+12129204987" target="_blank">
                             <i class="fa fa-phone"></i></a>
+                            <a class="btn btn-dark btn-social mx-2" href="resume.pdf" target="_blank">
+                              <i class="fa fa-file-pdf"></i></a>
                       </div>
                     <div class="col-lg-4 text-lg-right"><a class="mr-3" style="color:black;" href="#!">Privacy Policy</a><style="color:black;"a href="#!">Terms of Use</a></div>
                 </div>
