added gifs to projects

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                         <div class="portfolio-item">
 
                                       <a class="portfolio-link" data-toggle="modal" href="#portfolioModal1">
-                                      <div class="portfolio-hover"><img class="img-fluid" src="assets/img/projects/treasure.png" alt="" /></div></a>
+                                      <div class="portfolio-hover"><img class="img-fluid" src="assets/img/projects/treasure.gif" alt="" /></div></a>
 
                                       <div  style="margin-top: 5px; text-align:center;">
                                           <a class="portfolio-link" data-toggle="modal" href="#portfolioModal1">
@@ -155,7 +155,7 @@
                         <div class="portfolio-item">
 
                                       <a class="portfolio-link" data-toggle="modal" href="#portfolioModal2">
-                                      <div class="portfolio-hover"><img class="img-fluid" src="assets/img/projects/stock.png" alt="" /></div></a>
+                                      <div class="portfolio-hover"><img class="img-fluid" src="assets/img/projects/stock.gif" alt="" /></div></a>
                                       <div  style="margin-top: 5px; text-align:center;">
                                           <a class="portfolio-link" data-toggle="modal" href="#portfolioModal2">
                                             <i class="fas fa-info-circle fa-3x"></i></a>&nbsp
